:paintbrush: style(layout): fix page tag and link width not wraping

--- a/themes/hokusai-theme/assets/css/main.css
+++ b/themes/hokusai-theme/assets/css/main.css
@@ -370,6 +370,8 @@ footer *{
   gap: 0.5rem;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
+  width: 100%;
+  flex-wrap: wrap;
 }
 .tag {
   color: var(--text-dark);
@@ -396,6 +398,7 @@ footer *{
 .page-content a {
   color: var(--accent-dark);
   text-decoration: underline;
+  word-break: break-all;
 }
 
 .page-content a:hover {
